# bugbee

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  HARNESS.md  LICENSE  NOTICE  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  RELEASING.md  ROADMAP.md  SECURITY.md  SPEC.md  STATS.md  VISION.md  bugbee.toml  bunfig.toml  (+7 more)
.bugbee/: bugbee.jsonc  tui.json
.bugbee/agent/: duplicate-pr.md  triage.md
.bugbee/command/: ai-deps.md  changelog.md  commit.md  issues.md  translate.md
.bugbee/glossary/: README.md  ar.md  br.md  bs.md  da.md  de.md  es.md  fr.md  ja.md  ko.md  no.md  pl.md  ru.md  th.md  tr.md  zh-cn.md  zh-tw.md
.bugbee/plugins/: smoke-theme.json  tui-smoke.tsx
.bugbee/skills/effect/: SKILL.md
.bugbee/themes/: mytheme.json
.bugbee/tool/: github-pr-search.ts  github-triage.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/actions/setup-git-committer/: action.yml
.github/workflows/: beta.yml  bugbee.yml  ci.yml  compliance-close.yml  deploy.yml  docs-locale-sync.yml  docs-update.yml  duplicate-issues.yml  generate.yml  nix-eval.yml  nix-hashes.yml  pages.yml  pr-management.yml  pr-standards.yml  publish-github-action.yml  publish.yml  release-github-action.yml  release.yml  review.yml  security-audit.yml  stats.yml  test.yml  triage.yml
artifacts/glm52-rise-video/src/: data.ts  flash.tsx  june.tsx  minimax.tsx  novel.tsx  sheep.tsx  video.tsx
assets/brand/: README.md
crates/bugbee/: Cargo.toml
crates/bugbee-agent/: Cargo.toml
crates/bugbee-agent/src/: crawl.rs  hunter.rs  lib.rs  permissions.rs  roles.rs  session.rs  stream.rs
crates/bugbee-agent/src/harness/: budget.rs  events.rs  mod.rs  pipeline.rs  prompts.rs  runtime.rs
crates/bugbee-agent/src/superharness/: compaction.rs  hooks.rs  loop_.rs  mod.rs  parallel.rs  ralph.rs  types.rs
crates/bugbee-agent/src/swarm/: carlin.rs  checkpoint.rs  mod.rs  orchestrator.rs  recon.rs  scribe.rs
crates/bugbee-agent/src/tools/: dispatch.rs  mod.rs  registry.rs  truncate.rs
crates/bugbee-akg/: Cargo.toml
crates/bugbee-akg/src/: graph.rs  lib.rs  query.rs
crates/bugbee-cli/: Cargo.toml
crates/bugbee-cli/src/: main.rs  tui.rs
crates/bugbee-core/: Cargo.toml
crates/bugbee-core/src/: adjudication.rs  config.rs  error.rs  finding.rs  lib.rs  poc.rs  redact.rs  scope.rs  scoring.rs  store.rs  target.rs
crates/bugbee-engine/: Cargo.toml
crates/bugbee-engine/src/: hunt.rs  lib.rs  rules.rs  sandbox.rs  secrets.rs  taint.rs
crates/bugbee-harness/: Cargo.toml  build.rs
crates/bugbee-harness/src/: agents.rs  client.rs  diff.rs  hunt.rs  knowledge.rs  lib.rs  permissions.rs  prompts.rs  server.rs  tools.rs  types.rs
crates/bugbee-index/: Cargo.toml
crates/bugbee-index/src/: lib.rs
crates/bugbee-llm/: Cargo.toml
crates/bugbee-llm/src/: anthropic.rs  lib.rs  openai_compat.rs  types.rs
crates/bugbee-nsae/: Cargo.toml
crates/bugbee-nsae/src/: ast.rs  hypothesis.rs  lib.rs  matrix.rs  prover.rs  translator.rs
crates/bugbee-providers/: Cargo.toml
crates/bugbee-providers/src/: anthropic.rs  gateway.rs  lib.rs  openai_compat.rs  types.rs
crates/bugbee-ui/: Cargo.toml
crates/bugbee-ui/src/: app.rs  lib.rs  logo.rs  security_panel.rs  theme.rs
crates/bugbee/src/: main.rs
crates/bugbee/tests/: cli_hunt_integration.rs  e2e_validation.rs
docs/: SUPERHARNESS.md
fixtures/go-vuln/: main.go
fixtures/india-portal/: app.php  settings.py
fixtures/js-vuln/: server.js
fixtures/python-safe/: separated_flows.py
fixtures/python-vuln/: app.py  bugbee-report.md  bugbee.toml
github/: README.md  action.yml  index.ts  package.json
infra/: console.ts  enterprise.ts  lake.ts  monitoring.ts  stage.ts  stats.ts
nix/: bugbee.nix  desktop.nix  node_modules.nix
patches/: @silvia-odwyer%2Fphoton-node@0.3.4.patch  install-korean-ime-fix.sh  solid-js@1.9.10.patch
perf/: test-suite.md
policies/: enterprise.template.toml
prompts/: constitution.md  security-playbook.md
proto/: harness.proto
rules/classics-modern/: memory-web-cloud.yaml
rules/india-appsec/: india-gov-edu-enterprise.yaml
rules/owasp-2025/: injection-crypto-misconfig.yaml  web-auth-ssrf-xss.yaml
rules/owasp-basics/: injection.yaml
script/: beta.ts  changelog.ts  duplicate-pr.ts  generate.ts  publish.ts  raw-changelog.ts  stats.ts  translate-app.md  translate-app.test.ts  translate-app.ts  upgrade-opentui.ts  version.ts
script/github/: close-issues.ts  close-prs.ts
scripts/: install.sh  smoke-fixtures.sh
sdks/vscode/: README.md  package.json
sdks/vscode/script/: publish
sdks/vscode/src/: extension.ts
site/: .gitignore  README.md  index.html  package-lock.json  package.json  performance.css  styles.css  tailwind.config.ts  tsconfig.json
site/app/: footer.css  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/app/components/: AppShell.tsx  CursorGlow.tsx  FloatingObject.tsx  GlassCard.tsx  LoadingScreen.tsx  MagneticButton.tsx  Navbar.tsx  Providers.tsx  SectionReveal.tsx  Terminal.tsx
site/app/hooks/: useLenis.ts  useMagneticEffect.ts  useMousePosition.ts
site/app/lib/: utils.ts
site/app/sections/: Architecture.tsx  DeepEngine.tsx  Enterprise.tsx  FAQ.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InteractiveTerminal.tsx  LiveDemo.tsx  Navigation.tsx  OpenCore.tsx  Pricing.tsx  PrivateBeta.tsx  Problem.tsx  Stats.tsx  Testimonials.tsx  TrustedBy.tsx  WhyBugbee.tsx  (+1 more)
skills/security-hunt/: SKILL.md
specs/: project.md  tui-package.md
specs/storage/: effect-sqlite-package.md  remove-bugbee-db.md
specs/v2/: api.html  config.md  instructions.md  provider-model.md  provider-policy.md  schema-changelog.md  session.md  todo.md
vscode/: package.json  tsconfig.json
vscode/src/: extension.ts  securityPanel.ts
website/: index.html  styles.css
(+15 files in other folders)
