[workspace]
resolver = "2"
members = [
    "crates/bugbee-core",
    "crates/bugbee-providers",
    "crates/bugbee-index",
    "crates/bugbee-engine",
    "crates/bugbee-harness",
    "crates/bugbee-cli",
]
default-members = ["crates/bugbee-cli"]

[workspace.package]
version = "0.1.0-beta.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Bugbee Contributors"]
repository = "https://github.com/neuralbroker/bugbee"
description = "Terminal-first agentic IDE for bug fixing and vulnerability hunting"

[workspace.dependencies]
bugbee-core = { path = "crates/bugbee-core" }
bugbee-providers = { path = "crates/bugbee-providers" }
bugbee-index = { path = "crates/bugbee-index" }
bugbee-engine = { path = "crates/bugbee-engine" }
bugbee-harness = { path = "crates/bugbee-harness" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
keyring = "3"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
once_cell = "1"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
