[workspace]
resolver = "2"
members = [
    "crates/bugbee-core",
    "crates/bugbee-llm",
    "crates/bugbee-engine",
    "crates/bugbee-akg",
    "crates/bugbee-nsae",
    "crates/bugbee-agent",
    "crates/bugbee-ui",
    "crates/bugbee",
]
default-members = ["crates/bugbee"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Bugbee Contributors"]
repository = "https://github.com/neuralbroker/bugbee"
rust-version = "1.75"
description = "Terminal-first, memory-safe security agent for vulnerability hunting"

[workspace.dependencies]
bugbee-core = { path = "crates/bugbee-core" }
bugbee-llm = { path = "crates/bugbee-llm" }
bugbee-engine = { path = "crates/bugbee-engine" }
bugbee-akg = { path = "crates/bugbee-akg" }
bugbee-nsae = { path = "crates/bugbee-nsae" }
bugbee-agent = { path = "crates/bugbee-agent" }
bugbee-ui = { path = "crates/bugbee-ui" }
petgraph = "0.7"

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
directories = "5"
futures = "0.3"
hex = "0.4"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"
glob = "0.3"
rayon = "1"
