[package]
name = "bugbee-akg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Attack Knowledge Graph — causal dependency tracking for Bugbee"
rust-version.workspace = true

[dependencies]
bugbee-core = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
