[package]
name = "bugbee-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bugbee terminal CLI and TUI — agentic bug & vulnerability hunter"

[[bin]]
name = "bugbee"
path = "src/main.rs"

[dependencies]
bugbee-core = { workspace = true }
bugbee-providers = { workspace = true }
bugbee-index = { workspace = true }
bugbee-engine = { workspace = true }
bugbee-harness = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
