[package]
name = "bugbee-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, findings, scoring, config, redact for Bugbee"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
