[package]
name = "bugbee-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain types, config, store, scoring, and redaction for Bugbee"
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
directories = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
