[package]
name = "bugbee-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic vulnerability scanners and rule packs for Bugbee"
rust-version.workspace = true

[dependencies]
bugbee-core = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
