[package]
name = "bugbee-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent harness: tools, permissions, multi-agent hunt orchestration"

[dependencies]
bugbee-core = { workspace = true }
bugbee-providers = { workspace = true }
bugbee-index = { workspace = true }
bugbee-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
