[package]
name = "bugbee-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codebase indexer and repo map for Bugbee"

[dependencies]
bugbee-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# none
