[package]
name = "bugbee-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provider-agnostic LLM clients for Bugbee (BYOK)"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bugbee-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
