[package]
name = "bugbee-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model-agnostic LLM providers (any OpenAI-compatible + native adapters)"

[dependencies]
bugbee-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
