[package]
name = "bugbee"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Terminal-first, memory-safe security agent for vulnerability hunting"
rust-version.workspace = true

[[bin]]
name = "bugbee"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bugbee-agent = { workspace = true }
bugbee-core = { workspace = true }
bugbee-llm = { workspace = true }
bugbee-ui = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
walkdir = "2"
